--- a/frontend/vuejs/frontend/package.json
+++ b/frontend/vuejs/frontend/package.json
@@ -11,8 +11,11 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.9",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^4.0.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
